src/main/kotlin/mypackage/GramParser.java
// Generated from /Users/garanya/Desktop/Учеба/Компиляторы/compilers/src/main/kotlin/Gram.g4 by ANTLR 4.9.1
package mypackage;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, IDENTIFIER=66, 
		DECIMAL_LITERAL=67, LP=68, RP=69, LT=70, GT=71, TYPEDEF=72, IB_OUTLET_COLLECTION=73, 
		IB_OUTLET=74, WEAK_QUALIFIER=75, STRONG_QUALIFIER=76, AUTORELEASING_QUALIFIER=77, 
		UNSAFE_UNRETAINED_QUALIFIER=78, NULL_UNSPECIFIED=79, NULLABLE=80, NONNULL=81, 
		NULL_RESETTABLE=82, AUTO=83, REGISTER=84, STATIC=85, EXTERN=86, BRIDGE=87, 
		BRIDGE_TRANSFER=88, BRIDGE_RETAINED=89, BLOCK=90, INLINE=91, NS_INLINE=92, 
		KINDOF=93, CONST=94, VOLATILE=95, RESTRICT=96, TYPEOF=97, IF=98, ELSE=99, 
		GOTO=100, CONTINUE=101, BREAK=102, RETURN=103, MUL=104, DIV=105, MOD=106, 
		ADD=107, SUB=108, LE=109, GE=110, NOTEQUAL=111, EQUAL=112, BITAND=113, 
		BITXOR=114, BITOR=115, AND=116, OR=117, QUESTION=118, COLON=119, SIZEOF=120, 
		INC=121, DEC=122, BANG=123, DOT=124, STRUCTACCESS=125, LBRACK=126, RBRACK=127, 
		COMMA=128, HEX_LITERAL=129, OCTAL_LITERAL=130, BINARY_LITERAL=131, FLOATING_POINT_LITERAL=132, 
		CHARACTER_LITERAL=133, NIL=134, NULL_=135, YES=136, NO=137, TRUE=138, 
		FALSE=139, STRING_START=140, STRING_VALUE=141, STRING_NEWLINE=142, STRING_END=143;
	public static final int
		RULE_translationUnit = 0, RULE_topLevelDeclaration = 1, RULE_protocolList = 2, 
		RULE_protocolName = 3, RULE_selector = 4, RULE_blockType = 5, RULE_dictionaryExpression = 6, 
		RULE_dictionaryPair = 7, RULE_arrayExpression = 8, RULE_blockParameters = 9, 
		RULE_typeVariableDeclaratorOrName = 10, RULE_blockExpression = 11, RULE_messageExpression = 12, 
		RULE_receiver = 13, RULE_messageSelector = 14, RULE_keywordArgument = 15, 
		RULE_keywordArgumentType = 16, RULE_selectorExpression = 17, RULE_selectorName = 18, 
		RULE_protocolExpression = 19, RULE_encodeExpression = 20, RULE_typeVariableDeclarator = 21, 
		RULE_throwStatement = 22, RULE_tryBlock = 23, RULE_catchStatement = 24, 
		RULE_synchronizedStatement = 25, RULE_autoreleaseStatement = 26, RULE_functionDeclaration = 27, 
		RULE_functionDefinition = 28, RULE_functionSignature = 29, RULE_attribute = 30, 
		RULE_attributeName = 31, RULE_attributeParameters = 32, RULE_attributeParameterList = 33, 
		RULE_attributeParameter = 34, RULE_attributeParameterAssignment = 35, 
		RULE_declaration = 36, RULE_functionCallExpression = 37, RULE_enumDeclaration = 38, 
		RULE_varDeclaration = 39, RULE_typedefDeclaration = 40, RULE_typeDeclaratorList = 41, 
		RULE_typeDeclarator = 42, RULE_declarationSpecifiers = 43, RULE_attributeSpecifier = 44, 
		RULE_initDeclaratorList = 45, RULE_initDeclarator = 46, RULE_specifierQualifierList = 47, 
		RULE_ibOutletQualifier = 48, RULE_arcBehaviourSpecifier = 49, RULE_nullabilitySpecifier = 50, 
		RULE_storageClassSpecifier = 51, RULE_typePrefix = 52, RULE_typeQualifier = 53, 
		RULE_protocolQualifier = 54, RULE_typeSpecifier = 55, RULE_typeofExpression = 56, 
		RULE_enumSpecifier = 57, RULE_enumeratorList = 58, RULE_enumerator = 59, 
		RULE_enumeratorIdentifier = 60, RULE_directDeclarator = 61, RULE_declaratorSuffix = 62, 
		RULE_parameterList = 63, RULE_pointer = 64, RULE_arrayInitializer = 65, 
		RULE_structInitializer = 66, RULE_initializerList = 67, RULE_typeName = 68, 
		RULE_abstractDeclarator = 69, RULE_abstractDeclaratorSuffix = 70, RULE_parameterDeclarationList = 71, 
		RULE_parameterDeclaration = 72, RULE_declarator = 73, RULE_statement = 74, 
		RULE_labeledStatement = 75, RULE_rangeExpression = 76, RULE_compoundStatement = 77, 
		RULE_selectionStatement = 78, RULE_switchStatement = 79, RULE_switchBlock = 80, 
		RULE_switchSection = 81, RULE_switchLabel = 82, RULE_iterationStatement = 83, 
		RULE_whileStatement = 84, RULE_doStatement = 85, RULE_forStatement = 86, 
		RULE_forLoopInitializer = 87, RULE_forInStatement = 88, RULE_jumpStatement = 89, 
		RULE_expressions = 90, RULE_expression = 91, RULE_assignmentOperator = 92, 
		RULE_castExpression = 93, RULE_initializer = 94, RULE_constantExpression = 95, 
		RULE_unaryExpression = 96, RULE_unaryOperator = 97, RULE_postfixExpression = 98, 
		RULE_postfix = 99, RULE_argumentExpressionList = 100, RULE_argumentExpression = 101, 
		RULE_primaryExpression = 102, RULE_constant = 103, RULE_stringLiteral = 104, 
		RULE_identifier = 105;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "topLevelDeclaration", "protocolList", "protocolName", 
			"selector", "blockType", "dictionaryExpression", "dictionaryPair", "arrayExpression", 
			"blockParameters", "typeVariableDeclaratorOrName", "blockExpression", 
			"messageExpression", "receiver", "messageSelector", "keywordArgument", 
			"keywordArgumentType", "selectorExpression", "selectorName", "protocolExpression", 
			"encodeExpression", "typeVariableDeclarator", "throwStatement", "tryBlock", 
			"catchStatement", "synchronizedStatement", "autoreleaseStatement", "functionDeclaration", 
			"functionDefinition", "functionSignature", "attribute", "attributeName", 
			"attributeParameters", "attributeParameterList", "attributeParameter", 
			"attributeParameterAssignment", "declaration", "functionCallExpression", 
			"enumDeclaration", "varDeclaration", "typedefDeclaration", "typeDeclaratorList", 
			"typeDeclarator", "declarationSpecifiers", "attributeSpecifier", "initDeclaratorList", 
			"initDeclarator", "specifierQualifierList", "ibOutletQualifier", "arcBehaviourSpecifier", 
			"nullabilitySpecifier", "storageClassSpecifier", "typePrefix", "typeQualifier", 
			"protocolQualifier", "typeSpecifier", "typeofExpression", "enumSpecifier", 
			"enumeratorList", "enumerator", "enumeratorIdentifier", "directDeclarator", 
			"declaratorSuffix", "parameterList", "pointer", "arrayInitializer", "structInitializer", 
			"initializerList", "typeName", "abstractDeclarator", "abstractDeclaratorSuffix", 
			"parameterDeclarationList", "parameterDeclaration", "declarator", "statement", 
			"labeledStatement", "rangeExpression", "compoundStatement", "selectionStatement", 
			"switchStatement", "switchBlock", "switchSection", "switchLabel", "iterationStatement", 
			"whileStatement", "doStatement", "forStatement", "forLoopInitializer", 
			"forInStatement", "jumpStatement", "expressions", "expression", "assignmentOperator", 
			"castExpression", "initializer", "constantExpression", "unaryExpression", 
			"unaryOperator", "postfixExpression", "postfix", "argumentExpressionList", 
			"argumentExpression", "primaryExpression", "constant", "stringLiteral", 
			"identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'__covariant'", "'__contravariant'", "'return'", "'^'", 
			"'@'", "'{'", "'}'", "':'", "'['", "']'", "'void'", "'@selector'", "'@protocol'", 
			"'@encode'", "'@throw'", "'@try'", "'@finally'", "'@catch'", "'@synchronized'", 
			"'@autoreleasepool'", "';'", "'const'", "'='", "'__attribute__'", "'in'", 
			"'out'", "'inout'", "'bycopy'", "'byref'", "'oneway'", "'char'", "'short'", 
			"'int'", "'long'", "'float'", "'double'", "'signed'", "'unsigned'", "'enum'", 
			"'NS_OPTIONS'", "'NS_ENUM'", "'default'", "'...'", "'*'", "'.'", "'switch'", 
			"'case'", "'while'", "'do'", "'for'", "'*='", "'/='", "'%='", "'+='", 
			"'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'&'", "'+'", "'-'", 
			"'~'", null, null, "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "IDENTIFIER", "DECIMAL_LITERAL", 
			"LP", "RP", "LT", "GT", "TYPEDEF", "IB_OUTLET_COLLECTION", "IB_OUTLET", 
			"WEAK_QUALIFIER", "STRONG_QUALIFIER", "AUTORELEASING_QUALIFIER", "UNSAFE_UNRETAINED_QUALIFIER", 
			"NULL_UNSPECIFIED", "NULLABLE", "NONNULL", "NULL_RESETTABLE", "AUTO", 
			"REGISTER", "STATIC", "EXTERN", "BRIDGE", "BRIDGE_TRANSFER", "BRIDGE_RETAINED", 
			"BLOCK", "INLINE", "NS_INLINE", "KINDOF", "CONST", "VOLATILE", "RESTRICT", 
			"TYPEOF", "IF", "ELSE", "GOTO", "CONTINUE", "BREAK", "RETURN", "MUL", 
			"DIV", "MOD", "ADD", "SUB", "LE", "GE", "NOTEQUAL", "EQUAL", "BITAND", 
			"BITXOR", "BITOR", "AND", "OR", "QUESTION", "COLON", "SIZEOF", "INC", 
			"DEC", "BANG", "DOT", "STRUCTACCESS", "LBRACK", "RBRACK", "COMMA", "HEX_LITERAL", 
			"OCTAL_LITERAL", "BINARY_LITERAL", "FLOATING_POINT_LITERAL", "CHARACTER_LITERAL", 
			"NIL", "NULL_", "YES", "NO", "TRUE", "FALSE", "STRING_START", "STRING_VALUE", 
			"STRING_NEWLINE", "STRING_END"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TranslationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GramParser.EOF, 0); }
		public List<TopLevelDeclarationContext> topLevelDeclaration() {
			return getRuleContexts(TopLevelDeclarationContext.class);
		}
		public TopLevelDeclarationContext topLevelDeclaration(int i) {
			return getRuleContext(TopLevelDeclarationContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterTranslationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitTranslationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitTranslationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (IDENTIFIER - 66)) | (1L << (TYPEDEF - 66)) | (1L << (IB_OUTLET_COLLECTION - 66)) | (1L << (IB_OUTLET - 66)) | (1L << (WEAK_QUALIFIER - 66)) | (1L << (STRONG_QUALIFIER - 66)) | (1L << (AUTORELEASING_QUALIFIER - 66)) | (1L << (UNSAFE_UNRETAINED_QUALIFIER - 66)) | (1L << (AUTO - 66)) | (1L << (REGISTER - 66)) | (1L << (STATIC - 66)) | (1L << (EXTERN - 66)) | (1L << (BRIDGE - 66)) | (1L << (BRIDGE_TRANSFER - 66)) | (1L << (BRIDGE_RETAINED - 66)) | (1L << (BLOCK - 66)) | (1L << (INLINE - 66)) | (1L << (NS_INLINE - 66)) | (1L << (KINDOF - 66)) | (1L << (CONST - 66)) | (1L << (VOLATILE - 66)) | (1L << (RESTRICT - 66)) | (1L << (TYPEOF - 66)))) != 0)) {
				{
				{
				setState(212);
				topLevelDeclaration();
				}
				}
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(218);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelDeclarationContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public TopLevelDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterTopLevelDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitTopLevelDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitTopLevelDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDeclarationContext topLevelDeclaration() throws RecognitionException {
		TopLevelDeclarationContext _localctx = new TopLevelDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelDeclaration);
		try {
			setState(223);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(220);
				functionDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(221);
				declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(222);
				functionDefinition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
